force-app/main/default/objects/JBCXM__TransactionHeader__c/JBCXM__TransactionHeader__c.object-meta.xml
<CustomObject>
    <description>Transactions represent atomic financial transactions with a Customer. Header information of each transaction is stored as One Record in this object.</description>
    <label>Transaction Header(Deprecated)</label>
    <nameField>
        <displayFormat>Ord-{000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Header(Deprecated)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>