force-app/main/default/objects/JBCXM__TransactionHeader__c/fields/JBCXM__ASV__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ASV__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Annual Subscription Value.</description>
    <inlineHelpText>Annual Subscription Value calculated based on the Booking and Term.</inlineHelpText>
    <label>ASV</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>