force-app/main/default/objects/JBCXM__TransactionHeader__c/fields/JBCXM__BookingNumber__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__BookingNumber__c</fullName>
    <description>Optional Reference number from external systems.</description>
    <inlineHelpText>Optional Reference number from external systems.</inlineHelpText>
    <label>Booking Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>