force-app/main/default/objects/JBCXM__TransactionHeader__c/fields/JBCXM__Customer__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Customer__c</fullName>
    <description>Reference to CustomerInfo Record</description>
    <inlineHelpText>Reference to CustomerInfo Record</inlineHelpText>
    <label>Customer</label>
    <referenceTo>JBCXM__CustomerInfo__c</referenceTo>
    <relationshipLabel>Transaction Header</relationshipLabel>
    <relationshipName>TransactionHeader</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>