force-app/main/default/objects/JBCXM__TransactionHeader__c/fields/JBCXM__CustomerName__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__CustomerName__c</fullName>
    <description>Customer Name (auto populated)</description>
    <formula>JBCXM__Customer__r.JBCXM__CustomerName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Customer Name (auto populated)</inlineHelpText>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>