force-app/main/default/objects/JBCXM__TransactionHeader__c/fields/JBCXM__Date__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Date__c</fullName>
    <description>Transaction Date</description>
    <inlineHelpText>Transaction Date</inlineHelpText>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>