force-app/main/default/objects/JBCXM__TransactionHeader__c/fields/JBCXM__RevRecStartDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RevRecStartDate__c</fullName>
    <description>Deferred Revenue Recognition Start Date</description>
    <inlineHelpText>Deferred Revenue Recognition Start Date</inlineHelpText>
    <label>Revenue Recognition Start Date</label>
    <type>Date</type>
</CustomField>