force-app/main/default/objects/JBCXM__TransactionHeader__c/fields/JBCXM__Term__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Term__c</fullName>
    <description>Booking Term in Months</description>
    <inlineHelpText>Booking Term in whole Months</inlineHelpText>
    <label>Term</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>