force-app/main/default/objects/JBCXM__TransactionHeader__c/listViews/JBCXM__All.listView-meta.xml
<ListView>
    <fullName>JBCXM__All</fullName>
    <columns>NAME</columns>
    <columns>JBCXM__BookingNumber__c</columns>
    <columns>JBCXM__OrderType__c</columns>
    <columns>JBCXM__CustomerName__c</columns>
    <columns>JBCXM__Term__c</columns>
    <columns>JBCXM__Date__c</columns>
    <columns>JBCXM__ASV__c</columns>
    <columns>JBCXM__MRR__c</columns>
    <columns>JBCXM__OneTimeRevenue__c</columns>
    <columns>JBCXM__Users__c</columns>
    <columns>JBCXM__SalesRep__c</columns>
    <columns>JBCXM__RevRecStartDate__c</columns>
    <columns>JBCXM__RevRecEndDate__c</columns>
    <columns>JBCXM__NextRenewalDate__c</columns>
    <columns>JBCXM__Comment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>